--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BD_NAME= b_d
+BD_NAME= railway
 BD_USER= root
-BD_PASS= mysql
-BD_HOST= localhost
+BD_PASS= 5AadgEd1B6AGefb1d1c5Gc3e52d4c-Eb
+BD_HOST= monorail.proxy.rlwy.net
+BD_PORT= 44030
